<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublisherDisplayFragment"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/book_pub_toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="start|top"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pub_id_text_view"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/pub_id_text_view" />

        <TextView
            android:id="@+id/pub_name_text_view"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/pub_name_text_view" />

        <TextView
            android:id="@+id/pub_address_text_view"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/pub_address_text_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pub_id_text"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint="@string/pub_id_text" />

        <TextView
            android:id="@+id/pub_name_text"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/pub_name_text" />

        <TextView
            android:id="@+id/pub_address_text"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/pub_address_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_pub_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/prev_pub_button" />

        <Button
            android:id="@+id/next_pub_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/next_pub_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/pub_details_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/pub_details_button" />

        <Button
            android:id="@+id/show_book_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/show_book_button" />
    </LinearLayout>


</FrameLayout>