<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublisherUpdateFragment"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/book_pub_toolbar"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pub_id_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/pub_id_text_view" />

            <TextView
                android:id="@+id/pub_name_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/pub_name_text_view" />

            <TextView
                android:id="@+id/pub_address_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/pub_address_text_view" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pub_id_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:hint="@string/pub_id_edit_text" />

            <EditText
                android:id="@+id/pub_name_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:hint="@string/pub_name_edit_text" />

            <EditText
                android:id="@+id/pub_address_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:hint="@string/pub_address_edit_text" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/update_pub_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/update_pub_button"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/clear_pub_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/clear_pub_button"
        app:layout_constraintEnd_toEndOf="@+id/update_pub_button"
        app:layout_constraintStart_toStartOf="@+id/update_pub_button"
        app:layout_constraintTop_toBottomOf="@+id/update_pub_button" />

    <Button
        android:id="@+id/add_pub_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_pub_button"
        app:layout_constraintEnd_toEndOf="@+id/clear_pub_button"
        app:layout_constraintStart_toStartOf="@+id/clear_pub_button"
        app:layout_constraintTop_toBottomOf="@+id/clear_pub_button" />

    <Button
        android:id="@+id/search_pub_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_pub_button"
        app:layout_constraintEnd_toEndOf="@+id/add_pub_button"
        app:layout_constraintStart_toStartOf="@+id/add_pub_button"
        app:layout_constraintTop_toBottomOf="@+id/add_pub_button" />

    <Button
        android:id="@+id/delete_pub_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/delete_pub_button"
        app:layout_constraintEnd_toEndOf="@+id/search_pub_button"
        app:layout_constraintStart_toStartOf="@+id/search_pub_button"
        app:layout_constraintTop_toBottomOf="@+id/search_pub_button" />


</androidx.constraintlayout.widget.ConstraintLayout>