<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChapterFragment"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/book_pub_toolbar"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_info_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/book_info_text_view" />

            <TextView
                android:id="@+id/chapter_id_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_id_text_view" />

            <TextView
                android:id="@+id/chapter_title_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_title_text_view" />

            <TextView
                android:id="@+id/chapter_price_text_view"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_price_text_view" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|top"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_book_info_text_view"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:textSize="10sp"
                android:text="@string/display_book_info_text_view" />

            <EditText
                android:id="@+id/chapter_id_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/chapter_id_edit_text" />

            <EditText
                android:id="@+id/chapter_title_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/chapter_title_edit_text" />

            <EditText
                android:id="@+id/chapter_price_edit_text"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/chapter_price_edit_text" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/add_chapter_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_chapter_button"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>